--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -133,6 +133,9 @@
     <ClCompile Include="Stat.cpp">
       <Filter>GUI\Warcraft specific</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleItems.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -281,6 +284,9 @@
     </ClInclude>
     <ClInclude Include="Stat.h">
       <Filter>GUI\Warcraft specific</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleItems.h">
+      <Filter>Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
