--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -145,6 +145,9 @@
     <ClCompile Include="FelBall.cpp">
       <Filter>Projectiles</Filter>
     </ClCompile>
+    <ClCompile Include="Geyser.cpp">
+      <Filter>Projectiles</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -304,6 +307,9 @@
       <Filter>Projectiles</Filter>
     </ClInclude>
     <ClInclude Include="FelBall.h">
+      <Filter>Projectiles</Filter>
+    </ClInclude>
+    <ClInclude Include="Geyser.h">
       <Filter>Projectiles</Filter>
     </ClInclude>
   </ItemGroup>
